fixed hero banner stretching

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -150,11 +150,6 @@ div#meetingBanner.open {
 }
 
 .placeholder {
-    /* height: 10rem;
-    border: 1px solid rgba(0,0,0, 0.5);
-    margin: 1rem;
-    padding: 1rem;
-    background-color: rgba(0,0,0, 0.2); */
     padding: 1rem;
     padding-bottom: 2rem;
     margin-top: 1rem;
@@ -183,8 +178,9 @@ div#meetingBanner.open {
 #join{display: none;}
 
 #heroBanner{
-    position: relative;
-    height: 10rem;
+    display:block;
+    /* position: relative; */
+    /* height: 10rem; */
     margin: 0;
     margin-top: 1rem;
     padding: 0;
@@ -192,8 +188,9 @@ div#meetingBanner.open {
 
 #heroBanner img{
     text-align: center;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
+    max-width: 100%;
 }
 
 .heroText{
